# green-godot

./: .clang-format  .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  LOGO_LICENSE.md  README.md  SConstruct  methods.py  scu_builders.py  version.py
.github/: CODEOWNERS
core/: array.cpp  array.h  bitfield_dynamic.cpp  bitfield_dynamic.h  class_db.cpp  class_db.h  color.cpp  color.h  color_names.inc  command_queue_mt.cpp  command_queue_mt.h  compressed_translation.cpp  compressed_translation.h  core_string_names.cpp  core_string_names.h  cowdata.h  dictionary.cpp  dictionary.h  engine.cpp  engine.h  error_list.h  error_macros.cpp  error_macros.h  fixed_array.h  func_ref.cpp  func_ref.h  global_constants.cpp  global_constants.h  hash_map.h  hashfuncs.h  image.cpp  image.h  input_map.cpp  input_map.h  list.h  local_vector.h  locales.h  map.h  message_queue.cpp  message_queue.h  (+69 more)
doc/: Doxyfile
drivers/: SCsub  register_driver_types.cpp
editor/: animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  animation_track_editor_plugins.h  array_property_edit.cpp  array_property_edit.h  audio_stream_preview.cpp  audio_stream_preview.h  code_editor.cpp  code_editor.h  (+144 more)
modules/efx/parser/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.efx  tree-sitter.json
modules/efx/parser/bindings/c/: tree-sitter-efx.pc.in
modules/efx/parser/bindings/c/tree_sitter/: tree-sitter-efx.h
modules/efx/parser/src/: grammar.json  node-types.json  parser.c
(+1695 files in other folders)
