[package]
name = "tree-sitter-efx"
description = "Green Godot effect file parser"
version = "0.1.0"
authors = ["Kazam <mrcreamy112233@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "efx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-efx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.9"
