[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-efx"
description = "Green Godot effect file parser"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "efx"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Kazam", email = "mrcreamy112233@gmail.com" }]
requires-python = ">=3.10"
license.text = "GNU GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-efx"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
